@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -70,6 +70,13 @@ public interface TestService {
 	default void defaultMethodGateway(Object payload) {
 		throw new UnsupportedOperationException();
 	}
+
+	@Gateway(payloadExpression = "'fromGwExpression'", requestChannel = "requestChannel")
+	String noArgWithGateway();
+
+	@Payload("'fromPayloadAnnExpression'")
+	@Gateway(payloadExpression = "'fromGwExpression'", requestChannel = "requestChannel")
+	String noArgWithGatewayAndPayload();
 
 	class MyCompletableFuture extends CompletableFuture<String> {
 
